# AIAudioTranscriber

./: .gitignore  LICENSE  README.md  Transcribator.py  pyproject.toml  requirements.txt
src/transcriber/: Main.py  __init__.py
src/transcriber/api/: Routes.py
src/transcriber/database/: task_dao.py
src/transcriber/models/: CreateTaskRequest.py  Phrase.py  TaskInfo.py  TaskResponse.py  TranscriptionResult.py  task.py
src/transcriber/services/: QueueManager.py  TaskService.py  TranscriberService.py  queue_manager.py  task_service.py  transcriber_service.py
src/transcriber/utils/: AudioHelpers.py  TaskStatus.py
